fix login form collapse bug

--- a/src/app/LoginRegisterPage.css
+++ b/src/app/LoginRegisterPage.css
@@ -44,18 +44,6 @@
     padding: 10px;
 }
 
-.login-form {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.register-form {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
 .hide {
     display: none;
 }
